[gd_scene load_steps=5 format=3 uid="uid://d2w8ttetf1x5j"]

[ext_resource type="Script" path="res://scripts/characters/poison_enemy.gd" id="1_3sg6a"]
[ext_resource type="PackedScene" uid="uid://4vx8qx46qk4u" path="res://scenes/characters/bases/poisoner.tscn" id="1_gt56i"]
[ext_resource type="AudioStream" uid="uid://g5edwu8xbrdx" path="res://src/sound/sfx/punch-41105.mp3" id="3_cerss"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ugi3"]
radius = 1.431
height = 10.654

[node name="PoisonEnemy" type="CharacterBody3D" groups=["enemies_g"]]
script = ExtResource("1_3sg6a")

[node name="poisoner" parent="." instance=ExtResource("1_gt56i")]

[node name="LiveBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.197, 0)
shape = SubResource("CapsuleShape3D_3ugi3")

[node name="DeathBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.197, 0)
shape = SubResource("CapsuleShape3D_3ugi3")
disabled = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." groups=["enemies_g"]]
target_desired_distance = 10.0
avoidance_enabled = true
radius = 3.0

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_cerss")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
